@@ -1,0 +1,2 @@
+ALTER TABLE themes ADD COLUMN enabled BOOLEAN ;
+ALTER TABLE themes ALTER enabled SET DEFAULT TRUE ;
