@@ -1,6 +1,6 @@
 #!/usr/bin/perl -w
 #
-# Debian-specific script to register a new theme into the Gforge database
+# Debian-specific script to unregister a theme from the Gforge database
 
 use DBI ;
 use strict ;
@@ -15,22 +15,13 @@ require ("/usr/lib/gforge/lib/include.pl") ; # Include all the predefined functi
 &db_connect ;
 
 if ($#ARGV < 1) {
-    debug "Usage: register-theme <dirname> <theme name>" ;
+    debug "Usage: unregister-theme <dirname>" ;
     debug "The theme must be in /usr/share/gforge/www/themes/<dirname>/" ;
     exit 1 ;
 }
 
 $thdir = $ARGV [0] ;
 $thname = $ARGV [1] ;
-
-unless (-d "/usr/share/gforge/www/themes/$thdir") {
-    debug "The directory /usr/share/gforge/www/themes/$thdir does not exist" ;
-    exit 1 ;
-}
-unless (-e "/usr/share/gforge/www/themes/$thdir/Theme.class") {
-    debug "The file /usr/share/gforge/www/themes/$thdir/Theme.class does not exist" ;
-    exit 1 ;
-}
 
 $dbh->{AutoCommit} = 0;
 $dbh->{RaiseError} = 1;
@@ -47,16 +38,14 @@ eval {
     $sth->finish () ;
 
     if ($array [0] != 0) {
-	$query = "UPDATE themes SET enabled=true WHERE dirname='$thdir'" ;
-    } else {
-	$query = "INSERT INTO themes (dirname, fullname) VALUES ('$thdir', '$thname')" ;
+	$query = "UPDATE themes SET enabled=false WHERE dirname='$thdir'" ;
+
+	# debug $query ;
+	
+	$sth = $dbh->prepare ($query) ;
+	$sth->execute () ;
+	$sth->finish () ;
     }
-
-    # debug $query ;
-
-    $sth = $dbh->prepare ($query) ;
-    $sth->execute () ;
-    $sth->finish () ;
 
     # debug "Committing." ;
     $dbh->commit () ;
